# cmake-project-templates

./: .gitignore  LICENSE  README.md
ExeB-src-and-include/: CMakeLists.txt  main.cpp
ExeC-incl-header-only-lib/: CMakeLists.txt  main.cpp
ExeC-incl-header-only-lib/LibA/: LibA.h
ExeC-incl-header-only-lib/include/: FunA.h
ExeD-incl-full-lib/: CMakeLists.txt  main.cpp
ExeD-incl-full-lib/LibB/include/LibB/: LibB.h
ExeD-incl-full-lib/LibB/src/: LibB.cpp
ExeE-incl-transitive-libs/: CMakeLists.txt  main.cpp
ExeE-incl-transitive-libs/dependencies/LibC/: CMakeLists.txt
ExeE-incl-transitive-libs/dependencies/LibC/dependencies/LibA/: CMakeLists.txt
ExeE-incl-transitive-libs/dependencies/LibC/dependencies/LibB/src/: LibB.cpp
ExeE-incl-transitive-libs/dependencies/LibC/include/LibC/: LibC.h
ExeE-incl-transitive-libs/dependencies/LibC/src/: LibC.cpp
ExeF-fetch-header-only-lib/: CMakeLists.txt  main.cpp
ExeG-fetch-full-lib/: CMakeLists.txt  main.cpp
ExeG-fetch-full-lib/LibB/: CMakeLists.txt
ExeG-fetch-full-lib/LibB/include/LibB/: LibB.h
ExeH-fetch-transitive-libs/: CMakeLists.txt  main.cpp
ExeI-fetch-transitive-fetched/: CMakeLists.txt  main.cpp
ExeJ-fetch-glfw-glad/: CMakeLists.txt
ExeJ-fetch-glfw-glad-imgui/: CMakeLists.txt  main.cpp
ExeJ-fetch-online-cmake-repos-glfw-glad/: main.cpp
ExeJ-fetch-online-cmake-repos-glfw-glad/src/: FunA.cpp
ExeK-fetch-online-non-cmake-repo-imgui/: CMakeLists.txt  main.cpp
ExeK-fetch-online-non-cmake-repo-imgui/include/: FunA.h
ExeK-fetch-online-non-cmake-repo-imgui/src/: FunA.cpp
LibA/: CMakeLists.txt
LibA/include/: LibA.h
LibB/: CMakeLists.txt  libb-config.cmake
LibB/include/: LibB.h
LibB/src/: LibB.cpp
LibC/: CMakeLists.txt
ProjA-only-main-file/: CMakeLists.txt  main.cpp
ProjC-incl-header-only-lib/: CMakeLists.txt
ProjC-incl-header-only-lib/LibA/: CMakeLists.txt
Riley3/: CMakeLists.txt
cmake/: pp.cmake
dependencies/LibC/dependencies/LibA/include/LibA/: LibA.h
dependencies/LibC/src/: LibC.cpp
dependencies/LibD/: CMakeLists.txt
dependencies/LibD/dependencies/: CMakeLists.txt
dependencies/LibD/include/LibD/: LibD.h
dependencies/LibD/src/: LibD.cpp
template/: CMakeLists.txt
