# cmake_minimum_required(VERSION  3.21)
# project(LibA LANGUAGES CXX)
# list(APPEND CMAKE_MESSAGE_CONTEXT ${PROJECT_NAME})

# add_library(LibA INTERFACE)

# target_include_directories(
#     ${PROJECT_NAME}
#     INTERFACE $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
# )

# message("CMAKE_CURRENT_SOURCE_DIR: ${CMAKE_CURRENT_SOURCE_DIR}")